--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+
+
+html, body { height: 100%;
+  background-color: white }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+//dialog
+.alert{
+color : red;
+font-style: italic;
+font-size: small;
+width: 100%;
+}
+
+.hide{
+display: none;
+}
