--- a/src/app/access/place/place.component.scss
+++ b/src/app/access/place/place.component.scss
@@ -25,6 +25,10 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    font-size: large;
+}
+
+mat-card-title{
     font-size: xx-large;
 }
 
